bk_ida/gccida/g0/expand_builtin_ffs
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_ffs/src/builtins.c:3781:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( *( _BYTE *)( *( _QWORD *)( arglist->int_cst.int_cst.low + 8) + 61LL) >> 1), 
  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_ffs/src/obj/builtins.o] Error 1
